[package]
name = "deno_gpui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
serde = "1.0"
serde_json = "1.0"

[lib]
name = "deno_gpui"
crate-type = ["cdylib"]
path = "./src/lib.rs"
